Playground - initial push

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# JetBeans
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,3 +105,8 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+.idea/inspectionProfiles/Project_Default.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/workspace.xml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/workspace.xml
